Ensure images in cards on small screen are half width (#990)

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -517,6 +517,14 @@ END MARKETING CSS
         margin: 0 1rem 1rem 0;
         margin: auto;
         padding-right: 1rem;
+
+        img {
+          margin-bottom: 0;
+        }
+      }
+
+      div.small-hover-card-div {
+        width: 50%;
       }
 
       p {
